Day3/capstone/kustomize/overlays/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  selector:
    matchLabels:
      app: node-app-test
  template:
    metadata:
      labels:
        app: node-app-test
    spec:
      containers:
        - name: node-app
          env:
            - name: CAPSTONE
              value: "Grey"
