Day3/capstone/kustomize/overlays/test/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-route
  labels:
    app: node-app-test
spec:
  to:
    name: node-service-test
