Day3/capstone/kustomize/overlays/test/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app-test
spec:
  selector:
    app: node-app-test
